Fix: Sidebar items spacing and highlight position

--- a/Discord_Windows_11.theme.css
+++ b/Discord_Windows_11.theme.css
@@ -1,8 +1,8 @@
 /**
  * @name Discord Windows 11
- * @description Windows 11 styling for Discord.
+ * @description WinUI 3 app design in Discord
  * @author Josh65
- * @version 2025.4.6.0
+ * @version 2025.4.15.0
  * @source https://github.com/Josh65-2201/Discord-Windows-11-theme
  * @authorId 457604408587321387
  * @authorLink https://github.com/Josh65-2201
@@ -32,8 +32,8 @@
 
 :root{
 /* Settings |Default = +| -------------------------------------------------------------------------------------------- */
-	--toasts: flex;					/* + on = flex     off = none */
-	--waveToUser: none;				/*   on = flex   + off = none */
+	--toasts: flex;		/* + on = flex     off = none */
+	--waveToUser: none;	/*   on = flex   + off = none */
 
 
 
@@ -87,6 +87,9 @@
 	--infobarBackgroundSuccess: 57, 61, 27;
 	--infobarBackgroundCaution: 67, 53, 25;
 	--infobarBackgroundCritical: 68, 39, 38;
+	--infobarBadgeSuccess: 108, 203, 95;
+	--infobarBadgeCaution: 252, 225, 0;
+	--infobarBadgeCritical: 255, 153, 164;
 }
 
 /* Windows 11 style elements: Light ---------------------------------------------------------------------------------- */
@@ -131,6 +134,9 @@
 	--infobarBackgroundSuccess: 223, 246, 221;
 	--infobarBackgroundCaution: 255, 244, 206;
 	--infobarBackgroundCritical: 253, 231, 233;
+	--infobarBadgeSuccess: 15, 123, 15;
+	--infobarBadgeCaution: 157, 93, 0;
+	--infobarBadgeCritical: 196, 43, 28;
 }
 
 
@@ -836,7 +842,7 @@
 			/* In group */
 			.privateChannelsHeaderContainer__99e7c .headerText__99e7c, /* DMs categories */
 			.linkTop__2ea32 .iconContainer__2ea32{ /* Server channels */
-				margin-left: 32px;
+				margin-left: 4px;
 				margin-right: 18px;
 			}
 
@@ -858,12 +864,6 @@
 			ul[class="membersWrap_c8ffbb"]{
 				height: min-content !important;
 				padding-bottom: 4px;
-			}
-
-			/* Server category */
-			.wrapper__29444{
-				padding: 16px !important;
-				padding-left: 46px !important;
 			}
 
 			/* Server channel */
@@ -931,7 +931,7 @@
 					position: absolute;
 					height: 16px;
 					border-radius: 25%;
-					border-left: 3px solid var(--os-accent-color, #4cc2ff);
+					border-left: 3px solid color-mix(in srgb, var(--os-accent-color) 65%, white) !important;
 					content: "";
 				}
 
@@ -946,12 +946,11 @@
 				.modeSelected__2ea32::after, /* Server channel */
 				.selectedCategoryItem_f75d68::after, .selectedCategoryItem_c72b37::after{ /* Discover */
 					position: fixed;
-					background: var(--os-accent-color, #4cc2ff);
+					background: color-mix(in srgb, var(--os-accent-color) 65%, white) !important;
 					height: 16px;
-					width: 4px;
+					width: 3px;
 					border-radius: 4px;
-					margin-top: -24px;
-					margin-left: 28px;
+					margin-top: -26px;
 				}
 					/* Discover */
 					.selectedCategoryItem_f75d68::after, .selectedCategoryItem_c72b37::after{
@@ -960,11 +959,18 @@
 
 					/* Threads/forums */
 					.typeThread__2ea32.modeSelected__2ea32::after{
-						margin-left: 0px !important;
+						margin-left: 4px !important;
 					}
 
-					/* Suggested channels */
 
+				/* Discovery */
+				.navItem__551b0.selected__551b0::before{
+					position: absolute;
+					height: 16px;
+					border-radius: 4px;
+					border-left: 3px solid color-mix(in srgb, var(--os-accent-color) 65%, white) !important;
+					content: "";
+				}
 
 
 				/* Server settings: Template */
@@ -1431,7 +1437,7 @@
 					top: 20px;
 					left: 4px;
 					border-radius: 4px !important;
-					background: var(--os-accent-color, #4cc2ff);
+					background: color-mix(in srgb, var(--os-accent-color) 65%, white) !important;
 				}
 					/* Remove pill on anything other the selected */
 					.item__58105{
@@ -1780,7 +1786,7 @@
 					width: 100%;
 				}
 				.sidebar_c48ade .wrapper__29444{
-					padding: 16px 8px 16px 42px;
+					padding: 16px 8px;
 				}
 				.sidebar_c48ade .containerDefault__29444{
 					padding-top: 0px;
@@ -1795,15 +1801,20 @@
 				}
 
 		/* Channels */
+			/* Position */
+			.link__2ea32{
+				padding: 6px 8px !important
+			}
+
 			/* Unread */
 			.sidebar_c48ade .wrapper__2ea32 .unread__2ea32{
 				width: 3px;
 				height: 16px;
-				top: 8px;
-				left: 28px;
+				top: 10px;
+				left: 0px;
 				margin-top: 0px !important;
 				background: rgb(var(--badgeUnread));
-				border-radius: 8px;
+				border-radius: 4px;
 				z-index: 1 !important;
 			}
 			
@@ -1830,10 +1841,22 @@
 			/* Icons */
 				/* Colors */
 					/* Standard */
+					.icon__2ea32, /* Channels view */
 					.sidebar_c48ade .wrapper__2ea32.modeUnreadImportant__2ea32 .icon__2ea32,
 					.sidebar_c48ade .wrapper__2ea32.modeSelected__2ea32 .icon__2ea32,
 					.sidebar_c48ade .wrapper__2ea32 .icon__2ea32{
 						color: rgb(var(--textNormal));
+					}
+
+					/* Limited */
+					div[aria-label="Voice (Limited) icon"] .icon__2ea32 path,
+					div[aria-label="Text (Limited) icon"] .icon__2ea32 path{
+						color: rgb(var(--infobarBadgeCaution));
+					}
+	
+					/* No read access */
+					div .icon__2ea32[height="18"] path{
+						color: rgb(var(--infobarBadgeCritical));
 					}
 
 					/* Muted Channel */
@@ -1876,23 +1899,15 @@
 				}
 
 				/* Voice */
+				div[aria-label="Voice (Limited) icon"] .icon__2ea32 path,
 				div[aria-label="Voice icon"] .icon__2ea32 path{
 					d: path("M12 8a2 2 0 0 1 2 2v4a2 2 0 0 1-2 2H9a2 2 0 0 1-2-2v-4a2 2 0 0 1 2-2h3Zm3 5.162v-2.324l1.734-1.642A.75.75 0 0 1 18 9.741v4.518a.75.75 0 0 1-1.266.545L15 13.162ZM22 12c0-5.523-4.477-10-10-10S2 6.477 2 12a9.96 9.96 0 0 0 1.115 4.592l-1.068 3.823a1.25 1.25 0 0 0 1.54 1.54l3.826-1.067A9.96 9.96 0 0 0 12 22c5.523 0 10-4.477 10-10ZM3.5 12a8.5 8.5 0 1 1 4.367 7.43l-.27-.15-3.986 1.111 1.113-3.984-.151-.27A8.458 8.458 0 0 1 3.5 12Z") !important;
 				}
 
-			/* Threads/forums */
-				/* Position */
-				.containerDefault_c69b6d[role="listitem"]{
-					margin-left: 72px;
-				}
-					/* Spine */
-					.spineBorder__5b40b{
-						left: 54px;
-					}
-					.spine__5b40b{
-						left: -18px;
-					}
-
+			/* Threads */
+			.typeThread__2ea32.wrapper__2ea32{
+				margin-left: 36px !important;
+			}
 
 			/* Voice chat users */
 			.list_c3cd7d{
@@ -2001,9 +2016,10 @@
 					.messageListItem__5126c[data-is-self="true"] div .container_b7e1cb:not(:has(.embedCard__44c9a)){
 						direction: rtl;
 					}
-					.codeContainer__75297, /* Discord code block */
-					.markup__75297 .vc-shiki-container{ /* Vencord plugin: ShikiCodeblocks */
+					/* Code block */
+					.markup__75297 pre{
 						text-align: left !important;
+						max-width: none !important;
 					}
 
 				/* Background */
@@ -2109,9 +2125,8 @@
 							gap: 4px !important
 						}
 
-					/* Vencord: plugin Send timestamp, translate */
-						.buttonWrapper__24af7 svg,
-						.vc-trans-chat-button{
+					/* Vencord: plugin Send timestamp */
+						.buttonWrapper__24af7 svg{
 							scale: 1 !important;
 						}
 
@@ -2278,18 +2293,23 @@
 			background: rgb(var(--backgroundLayer1)) !important;
 		}
 
+		.nav__551b0{
+			padding: 4px !important;
+			gap: 4px !important;
+		}
+
 		.nav__551b0 .navItem__551b0{
 			height: 36px !important;
 			padding: 0px !important;
-			gap: 4px !important;
+			border-radius: 4px !important;
 			color: rgb(var(--textNormal)) !important;
 		}
-		/* Icon */
-		.nav__551b0 .navItem__551b0 .navItemIcon__551b0{
-			margin-left: 8px;
-			margin-right: 4px;
-			color: rgb(var(--textNormal)) !important;
-		}
+			/* Icon */
+			.nav__551b0 .navItem__551b0 .navItemIcon__551b0{
+				margin-left: 10px;
+				margin-right: 12px;
+				color: rgb(var(--textNormal)) !important;
+			}
 
 	/* Center content - Discovery */
 		.scroller__23746{
@@ -3294,7 +3314,7 @@
 			height: 16px;
 			width: 4px;
 			background: color-mix(in srgb, var(--os-accent-color, #4cc2ff) 20%, white);
-			border-radius: 25%;
+			border-radius: 4px;
 		}
 
 	/* Selected + Hovered */
